--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,50 +1,92 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-    --white:#fff;
-    --background:#F2F3F5; 
-    --gray-line:#DCDDE0;
-    --text:#666666;
-    --text-highlight:#B3B9FF;
-    --title:#2E384D;
-    --red:#E83F5B;
-    --green:#4CD62B;
-    --blue:#5965E0;
-    --blue-dark:#4953B8;
-    --blue-twitter:#2AA9E0;
-    }
-
-@media(max-width: 1080px) {
-    html {
-        font-size: 93.75%;
-    }
+  --white: #fff;
+  --background: #f2f3f5;
+  --gray-line: #dcdde0;
+  --text: #666666;
+  --text-highlight: #b3b9ff;
+  --title: #2e384d;
+  --red: #e83f5b;
+  --green: #4cd62b;
+  --blue: #5965e0;
+  --blue-dark: #4953b8;
+  --blue-twitter: #2aa9e0;
+  --back-principal: #233d4d;
 }
 
-@media(max-width: 720px) {
-    html {
-        font-size: 87.5%;
-    }
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
 }
 
 body {
-    background: var(--background);
-    color: var(--text);
+  background: var(--background);
+  color: var(--text);
 }
 
-body, input, textarea, button {
-    font: 400 16rem "Inter", sans-serif;
+body,
+input,
+textarea,
+button {
+  font: 400 16rem "Inter", sans-serif;
 }
 
 button {
-    cursor: pointer
+  cursor: pointer;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
+.back{
+    background-color: #619B8A;
+}
+
+.principal {
+  height: 100%;
+  background: var(--back-principal);
+}
+
+.input {
+  border: 0;
+  padding: 0px;
+  font-size: 1.3em;
+  font-family: "Ubuntu Light", "Ubuntu", "Ubuntu Mono", "Segoe Print",
+    "Segoe UI";
+  color: #ccc;
+  border: solid 1px #27ae60;
+  box-shadow: inner 0 0 4px rgba(0, 0, 0, 0.2);
+  background-color: #233d4d;
+}
+
+.check {
+    border: 0;
+    padding: 0px;
+    font-size: 1.3em;
+    font-family: "Ubuntu Light", "Ubuntu", "Ubuntu Mono", "Segoe Print",
+      "Segoe UI";
+    color: #ccc;
+    border: solid 1px #27ae60;
+    box-shadow: inner 0 0 4px rgba(0, 0, 0, 0.2);
+    background-color: #233d4d;
+  }
+
+input:focus {
+  outline: none !important;
+  border-color: #27ae60;
+  box-shadow: 0 0 10px #27ae60;
+}
