--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -61,6 +61,11 @@ a {
   background: var(--back-principal);
 }
 
+.secondary {
+  height: 100%;
+  background: #619B8A;
+}
+
 .input {
   border: 0;
   padding: 0px;
