--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -56,6 +56,10 @@ a {
     background-color: #619B8A;
 }
 
+.mainBack{
+  background-color: var(--back-principal);
+}
+
 .principal {
   height: 100%;
   background: var(--back-principal);
