feat: create github structure done

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,6 +52,11 @@ a {
   text-decoration: none;
 }
 
+.App{
+  display: flex;
+  justify-content: center;
+}
+
 .back{
     background-color: #619B8A;
 }
@@ -83,8 +88,9 @@ a {
     background-color: #233d4d;
   }
 
-input:focus {
-  outline: none !important;
-  border-color: #27ae60;
-  box-shadow: 0 0 10px #27ae60;
-}
+  .result {
+    width: 80vw;
+    height: 80vh;
+    background-color: #2e384d;
+    border-radius: 5px;
+  }
