--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color:#2e384d;
 }
 
 :root {
@@ -50,6 +51,10 @@ button {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+input {
+  border-color: #233d4d;
 }
 
 .App{
