--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color:#2e384d;
 }
 
 :root {
@@ -33,8 +32,8 @@
 }
 
 body {
-  background: var(--background);
   color: var(--text);
+  background:#2e384d;
 }
 
 body,
@@ -60,6 +59,8 @@ input {
 .App{
   display: flex;
   justify-content: center;
+  background: #233d4d;
+  height: 100vh;
 }
 
 .back{
